Fri Apr  8 17:59:09 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Resume_Handle_Deferred.h:
        * tao/Resume_Handle_Deferred.inl:
        * tao/Resume_Handle_Deferred.cpp:
          Added versioned namespace macros

Fri Apr  8 13:21:17 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/Array_Traits_T.h:
        * tao/Generic_Sequence_T.h:
        * tao/Object_Reference_Traits_T.h:
        * tao/String_Traits_T.h:
        * tao/Value_Traits_T.h:
        * tao/Valuetype/Valuetype_Traits_T.h:

          Optimizations for growing unbounded sequences by changing the
          length. Shallow copies are now used whenever possible during the
          duplication of the existing sequence elements.

Thu Apr  7 11:40:00 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy work branch.

        === start changelog ===

        Wed Apr  6 18:28:45 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * bin/corba-boolean.pl:
                * bin/subst_env.pl:
                * bin/tao_env.pl:
                  Removed these files, obsolete

        Mon Apr  4 17:46:05 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * tests/Bug_3953_Regression:
                * tests/Bug_3953_Regression:
                * tests/MT_NoUpcall_Client_Leader:
                  New tests for Wait Strategy mt_noupcall

                * tao/Connection_Handler.h:
                * tao/Connection_Handler.cpp:
                  Integrated some changes from 1.3a as start to get mt_noupcall working

                * tao/LF_Event.h:
                * tao/LF_Invocation_Event.h:
                * tao/LF_Multi_Event.h:
                  Doxygen

                * tao/tao.mpc:
                  Added new files

        Sun Feb 20 18:57:46 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * TAO_IDL/fe/lex.yy.cpp:
                  Added missing include
