@@ -1,3 +1,9 @@
+Sat Apr  9 08:03:56 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/MT_NoUpcall_Client_Leader/chatter.h:
+        * tests/MT_NoUpcall_Client_Leader/chatter.cpp:
+          Unicode fixes
+
 Fri Apr  8 17:59:09 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/Resume_Handle_Deferred.h:
